--- a/styles/src/main/res/values/colors.xml
+++ b/styles/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+<!--    <color name="purple_200">#FFBB86FC</color>-->
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -8,4 +8,39 @@
     <color name="material_black">#161616</color>
     <color name="material_white">#EEEEEE</color>
     <color name="colorPrimary_light">#000000</color>
+
+    <color name="status_bar_default_color">#101010</color>
+
+    <color name="background_dark">#202124</color>
+    <color name="background_light">#FEFEFE</color>
+
+    <color name="colorPrimary">#304ffe</color>
+    <color name="colorSecondary">#0026ca</color>
+
+    <color name="primaryColor">#212121</color>
+    <color name="primaryLightColor">#484848</color>
+    <color name="primaryDarkColor">#000000</color>
+    <color name="secondaryColor">#304ffe</color>
+    <color name="secondaryLightColor">#7a7cff</color>
+    <color name="secondaryDarkColor">#0026ca</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#ffffff</color>
+
+<!--    <color name="primaryColor">#fafafa</color>-->
+<!--    <color name="primaryLightColor">#ffffff</color>-->
+<!--    <color name="primaryDarkColor">#c7c7c7</color>-->
+<!--    <color name="secondaryColor">#455a64</color>-->
+<!--    <color name="secondaryLightColor">#718792</color>-->
+<!--    <color name="secondaryDarkColor">#1c313a</color>-->
+<!--    <color name="primaryTextColor">#000000</color>-->
+<!--    <color name="secondaryTextColor">#ffffff</color>-->
+
+<!--    <color name="primaryColor">#fafafa</color>-->
+<!--    <color name="primaryLightColor">#ffffff</color>-->
+<!--    <color name="primaryDarkColor">#c7c7c7</color>-->
+<!--    <color name="secondaryColor">#263238</color>-->
+<!--    <color name="secondaryLightColor">#4f5b62</color>-->
+<!--    <color name="secondaryDarkColor">#000a12</color>-->
+<!--    <color name="primaryTextColor">#000000</color>-->
+<!--    <color name="secondaryTextColor">#ffffff</color>-->
 </resources>
