--- a/styles/src/main/res/values/themes.xml
+++ b/styles/src/main/res/values/themes.xml
@@ -2,20 +2,35 @@
     <!-- Base application theme. -->
     <style name="Theme.School_App" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/material_white</item>
+        <item name="colorOnPrimary">@color/material_black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/material_black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/status_bar_default_color</item>
         <!-- Customize your theme here. -->
+        <item name="android:colorBackground">@color/background_light</item>
     </style>
 
     <style name="Theme.School_App.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.School_App.PopupOverlay" parent="ThemeOverlay.AppCompat.DayNight"/>
+
+    <style name="Theme.School_App.AppBarOverlay" parent="ThemeOverlay.AppCompat.DayNight.ActionBar">
+
+<!--        <item name="android:actionMenuTextColor">@color/toolbarTextColorLight</item>-->
+
+    </style>
+
+    <style name="TransparentToolbar" parent="Theme.School_App.NoActionBar">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="colorPrimary">@android:color/transparent</item>
     </style>
 </resources>
