--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
@@ -16,5 +16,21 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+
+        <item android:title="Account">
+            <menu>
+
+                <item
+                    android:id="@+id/nav_profile"
+                    android:title="@string/menu_profile"
+                    android:icon="@drawable/ic_baseline_profile_24"/>
+
+                <item
+                    android:id="@+id/nav_logout"
+                    android:title="@string/menu_logout"
+                    android:icon="@drawable/ic_baseline_logout_24"/>
+            </menu>
+
+        </item>
     </group>
 </menu>
