--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,4 +19,9 @@
         android:id="@+id/nav_slideshow"
         android:name="com.mobilelearning.solutions.school_app.ui.slideshow.SlideshowFragment"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_profile"
+        android:name="com.mobilelearning.solutions.account.Fragment_Profile"
+        tools:layout="@layout/fragment_profile"/>
 </navigation>
