--- a/styles/src/main/res/values/themes.xml
+++ b/styles/src/main/res/values/themes.xml
@@ -42,4 +42,33 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
     </style>
+
+    <style name="Theme.School_App.TextInputContainer" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="boxCornerRadiusTopStart">8dp</item>
+        <item name="boxCornerRadiusTopEnd">8dp</item>
+        <item name="boxCornerRadiusBottomStart">8dp</item>
+        <item name="boxCornerRadiusBottomEnd">8dp</item>
+    </style>
+
+    <style name="Theme.School_App.TextInput">
+        <item name="android:fontFamily">@font/roboto_regular</item>
+    </style>
+
+    <style name="Theme.School_App.TextInputAutoComplete">
+        <item name="android:textColor">@color/material_black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/roboto_regular</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:inputType">textAutoComplete</item>
+    </style>
+
+    <style name="Theme.School_App.HeaderLabel">
+        <item name="android:textColor">@color/material_black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
 </resources>
